--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
   </div>
   <div class="about">
     <img src="./img2/mission-img.jpg" alt="">
-    <h1>お客様のために進化する成長企業であり続ける</h1>
-    <p>顧客主導サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたします。</p>
-    <a href="#">ミッション詳細</a>
+    <div class="text-wrap">
+      <h1>お客様のために進化する成長企業であり続ける</h1>
+      <p>顧客主導サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたします。</p>
+      <a href="#">ミッション詳細</a>
+    </div>
   </div>
   <div class="service">
     <h1>service</h1>
